# zenoh-plugin-grpc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: nightly-build.yml  nightly-release.yml
docker/: README.md
packaging/: README.md
packaging/scripts/: build-all.sh  build-python.sh  package-deb.sh  version.sh
packaging/templates/: control.in
packaging/templates/cmake/: zenohgrpcxxConfig.cmake.in  zenohgrpcxxConfigVersion.cmake.in  zenohgrpcxxTargets.cmake.in
packaging/templates/maintainer-scripts/: README.md
packaging/templates/manifests/: zenoh-bridge-grpc.manifest  zenoh-grpc-c.manifest  zenoh-grpc-client-rs.manifest  zenoh-grpc-cpp.manifest  zenoh-plugin-grpc.manifest
zenoh-bridge-grpc/: Cargo.toml  README.md
zenoh-bridge-grpc/src/: main.rs
zenoh-grpc-client-sdk/: README.md
zenoh-grpc-client-sdk/zenoh-grpc-c/: CMakeLists.txt  Cargo.toml  README.md
zenoh-grpc-client-sdk/zenoh-grpc-c/examples/: common.h  z_get.c  z_pub.c  z_put.c  z_querier.c  z_queryable.c  z_queryable_callback.c  z_sub.c  z_sub_callback.c
zenoh-grpc-client-sdk/zenoh-grpc-c/include/: zenoh_grpc.h
zenoh-grpc-client-sdk/zenoh-grpc-c/src/: lib.rs
zenoh-grpc-client-sdk/zenoh-grpc-client-rs/: Cargo.toml  README.md
zenoh-grpc-client-sdk/zenoh-grpc-client-rs/examples/: info.rs  pub_sub.rs  queryable.rs
zenoh-grpc-client-sdk/zenoh-grpc-client-rs/src/: args.rs  lib.rs  queue.rs
zenoh-grpc-client-sdk/zenoh-grpc-cpp/: CMakeLists.txt  README.md
zenoh-grpc-client-sdk/zenoh-grpc-cpp/examples/: common.hpp  get.cpp  pub.cpp  querier.cpp  queryable.cpp  queryable_callback.cpp  sub.cpp  sub_callback.cpp
zenoh-grpc-client-sdk/zenoh-grpc-cpp/include/zenoh_grpc/: session.hpp
zenoh-grpc-client-sdk/zenoh-grpc-python/: Cargo.toml  README.md  pyproject.toml
zenoh-grpc-client-sdk/zenoh-grpc-python/examples/: get.py  pub.py  querier.py  queryable.py  queryable_callback.py  sub.py  sub_callback.py
zenoh-grpc-client-sdk/zenoh-grpc-python/src/: common.rs  enums.rs  events.rs  lib.rs  objects.rs
zenoh-grpc-client-sdk/zenoh-grpc-python/zenoh_grpc/: __init__.py  __init__.pyi
zenoh-grpc-proto/: Cargo.toml  build.rs
zenoh-grpc-proto/proto/: zenoh_grpc.proto
zenoh-grpc-proto/src/: lib.rs
zenoh-plugin-grpc/: Cargo.toml  README.md
zenoh-plugin-grpc/src/: config.rs  lib.rs
