[package]
name = "zenoh-plugin-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["dynamic_plugin"]
dynamic_plugin = []

[lib]
name = "zenoh_plugin_grpc"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
bytes.workspace = true
flume.workspace = true
futures.workspace = true
futures-core.workspace = true
git-version.workspace = true
hyper-util.workspace = true
lazy_static.workspace = true
pin-project-lite.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true
zenoh.workspace = true
zenoh-ext.workspace = true
zenoh-plugin-trait.workspace = true
zenoh-result.workspace = true
zenoh-util.workspace = true
zenoh-grpc-proto.workspace = true
