[package]
name = "zenoh-grpc-c"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "zenohgrpc"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flume.workspace = true
tokio.workspace = true
zenoh-grpc-client-rs.workspace = true
zenoh-grpc-proto.workspace = true
